@@ -61,23 +61,37 @@ do
     shift
 done
 
-# Specify the default versions to use as a string <tool>:<branch>. These are
-# the development versions for the ARC 4.4 tool chain release. Only actually
-# matters if --auto-checkout is set.
-cgen="cgen:arc_4_4-cgen-1_0-dev"
-binutils="binutils:arc_4_8-binutils-2_23_1-dev"
-gcc="gcc:arc_4_8-gcc-4_8-dev"
-gdb="gdb:arc_4_8-gdb-7_5_1-dev"
-newlib="newlib:arc_4_8-newlib-2_0-dev"
-uclibc="uClibc:arc_4_8-uClibc-0_9_30-dev"
-linux="linux:stable-arc-3.2"
+# Specify the default versions to use as a string
+# <remote>:<tool>:<branch>. These are the development versions for the ARC 4.8
+# tool chain release. Only actually matters if --auto-checkout and/or
+# auto-pull is set. <remote> is by default empty, so will fetch from the
+# current remote (which is probably what is wanted), but can be set to be an
+# explicit named remote if necessary.
+cgen=":cgen:arc_4_4-cgen-1_0-dev"
+binutils=":binutils:arc_4_8-binutils-2_23_1-dev"
+gcc=":gcc:arc_4_8-gcc-4_8-dev"
+gdb=":gdb:arc_4_8-gdb-7_5_1-dev"
+newlib=":newlib:arc_4_8-newlib-2_0-dev"
+uclibc=":uClibc:arc_4_8-uClibc-0_9_30-dev"
+linux=":linux:stable-arc-3.2"
 
 for version in ${cgen} ${binutils} ${gcc} ${gdb} ${newlib} ${uclibc} ${linux}
 do
-    tool=`echo ${version} | cut -d ':' -f 1`
-    branch=`echo ${version} | cut -d ':' -f 2`
+    remote=`echo ${version} | cut -d ':' -f 1`
+    tool=`echo ${version} | cut -d ':' -f 2`
+    branch=`echo ${version} | cut -d ':' -f 3`
 
     cd ${ARC_GNU}/${tool}
+
+    if [ "x${autopull}" = "x--auto-pull" ]
+    then
+	# Need to fetch first, in case it is a branch that is new. But only do
+	# this if we have auto-pull enabled (so we work if not online).
+	if ! git fetch ${remote}
+	then
+	    exit 1
+	fi
+    fi
 
     if [ "x${autocheckout}" = "x--auto-checkout" ]
     then
