@@ -1,3 +1,8 @@
+2013-02-25  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
+	* arc-versions.sh: Optionally do a fetch first, to deal with new
+	branches.
+
 2013-02-25  Simon Cook  <simon.cook@embecosm.com>
 
 	* arc-versions.sh: Updated binutils, gcc, gdb and newlib branch
